# booky

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: assemble.py  create.py  main.py  process.py  util.py
